--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main, develop ]
     tags: [ 'v*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
 
 env:
   GO_VERSION: '1.24'
@@ -85,7 +85,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
             type=raw,value=develop,enable=${{ github.ref == 'refs/heads/develop' }}
 
       - name: Build and push Docker image
@@ -104,7 +104,7 @@ jobs:
             COMMIT=${{ github.sha }}
 
       - name: Update Docker Hub description
-        if: github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
         uses: peter-evans/dockerhub-description@v4
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -116,9 +116,34 @@ jobs:
   security-scan:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/'))
     steps:
+      - name: Wait for image to be available
+        run: |
+          echo "Waiting for Docker image to be available..."
+          sleep 30
+          
+      - name: Login to Docker Hub for scanning
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Pull and verify image exists
+        run: |
+          IMAGE_REF="${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
+          echo "Checking if image exists: $IMAGE_REF"
+          if docker manifest inspect $IMAGE_REF > /dev/null 2>&1; then
+            echo "✅ Image exists and is accessible"
+            echo "IMAGE_EXISTS=true" >> $GITHUB_ENV
+          else
+            echo "❌ Image not found or not accessible"
+            echo "IMAGE_EXISTS=false" >> $GITHUB_ENV
+          fi
+
       - name: Run Trivy vulnerability scanner
+        if: env.IMAGE_EXISTS == 'true'
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
@@ -126,6 +151,13 @@ jobs:
           output: 'trivy-results.sarif'
 
       - name: Upload Trivy scan results to GitHub Security tab
+        if: env.IMAGE_EXISTS == 'true'
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: 'trivy-results.sarif'
+
+      - name: Skip security scan
+        if: env.IMAGE_EXISTS == 'false'
+        run: |
+          echo "⚠️ Skipping security scan - image not available"
+          echo "This might happen if the build failed or image push was not successful"
